--- a/frontend/index.html
+++ b/frontend/index.html
@@ -70,6 +70,18 @@
               <span class="arrow"><i class="bx bxs-right-arrow"></i></span>
             </div>
           </div>
+          <div class="row logout">
+            <div class="col-sm-8 side-menu">
+              <a href="#" class="">
+                <span class="icon"><i class="bx bx-log-out"></i></span>
+
+                <span class="text">Dosen</span>
+              </a>
+            </div>
+            <div class="col-sm-4 arrow-inner">
+              <span class="arrow"><i class="bx bxs-right-arrow"></i></span>
+            </div>
+          </div>
         </div>
       </div>
 
