--- a/frontend/dosen/index.html
+++ b/frontend/dosen/index.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
 
-    <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/index.css" />
-    <link rel="stylesheet" href="vendor/boxicons/css/boxicons.min.css" />
+    <link rel="stylesheet" href="../vendor/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../css/index.css" />
+    <link rel="stylesheet" href="../vendor/boxicons/css/boxicons.min.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous" />
     <title>React App</title>
   </head>
   <body>
     <div class="wrapper hover_collapse">
       <div class="top_navbar">
-        <img src="img/burger_small.png" alt="" />
+        <img src="../img/burger_small.png" alt="" />
         <div class="logo"><h1>PORTAL</h1></div>
         <div class="menu">
           <div class="profile_wrap">
@@ -24,7 +24,7 @@
                 <i class="bx bxs-user"></i>
               </div>
 
-              <h2 class="name">Admin</h2>
+              <h2 class="name">Dosen</h2>
               <span class="icon"> </span>
             </div>
           </div>
@@ -58,24 +58,13 @@
               <span class="arrow"><i class="bx bxs-right-arrow"></i></span>
             </div>
           </div>
-          <div class="row">
-            <div class="col-sm-8 side-menu">
-              <a href="#" class="">
-                <span class="icon"><i class="bx bxs-user"></i></span>
 
-                <span class="text">Dosen</span>
-              </a>
-            </div>
-            <div class="col-sm-4 arrow-inner">
-              <span class="arrow"><i class="bx bxs-right-arrow"></i></span>
-            </div>
-          </div>
-          <div class="row logout">
+          <div class="row logout-dosen">
             <div class="col-sm-8 side-menu">
               <a href="#" class="">
                 <span class="icon"><i class="bx bx-log-out"></i></span>
 
-                <span class="text">Dosen</span>
+                <span class="text"></span>
               </a>
             </div>
             <div class="col-sm-4 arrow-inner">
@@ -115,6 +104,6 @@
       </div>
     </div>
     <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
-    <script src="js/main.js"></script>
+    <script src="../js/main.js"></script>
   </body>
 </html>
