tabel dan tampil RPS

--- a/frontend/admin/index.html
+++ b/frontend/admin/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper hover_collapse">
       <div class="top_navbar">
-        <img src="img/burger_small.png" alt="" />
+        <img src="../img/burger_small.png" alt="" />
         <div class="logo"><h1>PORTAL</h1></div>
         <div class="menu">
           <div class="profile_wrap">
