--- a/frontend/dosen/detailrps.html
+++ b/frontend/dosen/detailrps.html
@@ -454,7 +454,7 @@
 
                      <tr>
                        <td></td>
-                       <td colspan="6">UAS</td>
+                       <td colspan="6" class="text-center">UAS</td>
                        <td></td>
                      </tr>
 
